<resources>
    <!-- App title strings -->
    <string name="app_name">ARENA Smart Ball</string>
    <string name="arena_string">ARENA @ UofSC</string>

    <!-- Navigation drawer names -->
    <string name="connect_drawer_name">Connect</string>
    <string name="details_drawer_name">Details</string>
    <string name="command_drawer_name">Commands</string>
    <string name="capture_drawer_name">Capture</string>
    <string name="download_drawer_name">Download</string>
    <string name="data_drawer_name">Data</string>
    <string name="settings_drawer_name">Settings</string>

    <!-- Text Strings -->
    <string name="text_about">About</string>
    <string name="warning">Warning</string>
    <string name="location_permission">Location Permission</string>
    <string name="write_ext_storage_permission">Write Permission</string>
    <string name="bluetooth_permission">Bluetooth Permission</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="connected">Connected</string>
    <string name="cancel_connection">Cancel Connection</string>
    <string name="not_connected">Not Connected</string>
    <string name="name">Name:&#160;</string>
    <string name="address">Address:&#160;</string>
    <string name="enable_scanning">Enable Scanning</string>
    <string name="scanning">Scanning…</string>
    <string name="services">Services</string>
    <string name="discover">Discover</string>
    <string name="connect">Connect</string>
    <string name="disconnect">Disconnect</string>
    <string name="continuous_read">Continuous Read</string>
    <string name="no_device_chosen">No Device Chosen</string>
    <string name="uuid">UUID: %s</string>
    <string name="readyCaps">READY</string>
    <string name="requesting_value">Requesting Value…</string>
    <string name="unable_to_read">Unable to Read</string>
    <string name="value_received">Value Received</string>
    <string name="reset">Reset</string>
    <string name="goto_download">To Download</string>
    <string name="download">Download</string>
    <string name="cancel_download">Cancel Download</string>
    <string name="capture">CAPTURE</string>
    <string name="capture_next_impact">Capture Next Impact</string>
    <string name="ready">Ready</string>
    <string name="save">Save</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="clear">Clear</string>
    <string name="ball_reset">Ball Reset</string>
    <string name="impact_detected">Impact Detected</string>
    <string name="waiting_for_impact_timed_out">Waiting for Impact Timed Out</string>
    <string name="last_impact">Last Impact:&#160;</string>
    <string name="downloading_data_with_type">Downloading type %d data…</string>
    <string name="download_complete">Download Complete</string>
    <string name="download_cancelled">Download Cancelled</string>
    <string name="no_current_download">No Current Download</string>
    <string name="in_range">In range</string>
    <string name="out_of_range">Out of range</string>
    <string name="tap_to_connect">Tap to Connect</string>
    <string name="tap_to_disconnect">Tap to Disconnect</string>

    <!-- Content descriptions -->
    <string name="battery_ic_content">battery_ic_content</string>
    <string name="ball_ic_content">ball_ic_content</string>

    <!-- The symbol to use to represent blank fields -->
    <string name="blank_symbol">&#160;N/A</string>

    <!-- Dialog Strings -->
    <string name="access_location_explanation">"This application needs to access the location of the device in order to scan for Smart Balls."</string>
    <string name="access_location_denied_explanation">"This application will not be able to scan for Smart Balls without knowing the device's location."</string>
    <string name="write_ext_storage_explanation">"This application needs to write to the external storage in order to save impact data collected from Smart Balls."</string>
    <string name="write_ext_storage_denied_explanation">"This application will not be able to save impact data without permission to write to external storage."</string>
    <string name="access_bluetooth_explanation">This application uses Bluetooth to communicate with the ball</string>
    <string name="access_bluetooth_denied_explanation">This application will not be able to connect to a ball without Bluetooth</string>
    <string name="location_explanation">Location services must be enabled to find Smart Balls. Location can be enabled from your device\'s Settings</string>

    <!-- Service names -->
    <string name="generic_access">Generic Access</string>
    <string name="generic_attribute">Generic Attribute</string>
    <string name="device_information">Device Information</string>
    <string name="battery_service">Battery Service</string>
    <string name="smart_ball_service">Smart Ball Service</string>

    <!-- Characteristic names -->
    <string name="device_name">Device Name</string>
    <string name="appearance">Appearance</string>
    <string name="ppcp">Peripheral Preferred Connection Parameters</string>
    <string name="service_changed">Service Changed</string>
    <string name="system_id">System ID</string>
    <string name="model_number">Model Number</string>
    <string name="serial_number">Serial Number</string>
    <string name="firmware_revision">Firmware Revision</string>
    <string name="software_revision">Software Revision</string>
    <string name="manufacturer_name">Manufacturer Name</string>
    <string name="battery_level">Battery Level</string>
    <string name="logging">Logging</string>
    <string name="command_field">Command Field</string>
    <string name="firmware_write_field">Firmware Write Field</string>
    <string name="response_buffer">Response Buffer</string>
    <string name="sample_rate">Sample Rate</string>
    <string name="status">Status</string>
    <string name="error">Error</string>
    <string name="kick_event">Kick Event</string>
    <string name="file_size">File Size</string>

    <!-- Preferences -->
    <string name="pref_automatic_download_id">pref_automatic_download</string>

    <!-- Preference Names -->
    <string name="pref_automatic_download">Automatic Download</string>

    <!-- Preference Descriptions -->
    <string name="pref_automatic_download_dscr">Begin data downloads as soon as they occur</string>

</resources>
